welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: illegal start of simple pattern
var nb Pas = nb Pas +1
           ^Variables:3: error: '=' expected but ';' found.
while (!estSurBiscuit) {avance(nbPas)}
^