welcome.lessons.welcome.variables.Variables.scala.code
var nb Pas = nb Pas +1
while (!estSurBiscuit) {avance(nbPas)}
prendBiscuit()
recule(nbPas)
poseBiscuit()


